--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,7 +63,9 @@
     
 
     <div class="article-content">
-      <p>This site is created to blog stories using codes. Interested readers are invited to contribute.</p>
+      <p>This site is created for story tellers using codes. Interested readers are invited to contribute.
+ </P>     
+Stories using R or Python are very much encouraged but stories with any other coding language are also welcome</p>
 
     </div>
   </article>
