--- a/public/about/index.html
+++ b/public/about/index.html
@@ -64,8 +64,11 @@
 
     <div class="article-content">
       <p>This site is created for story tellers using codes. Interested readers are invited to contribute.
- </P>     
-Stories using R or Python are very much encouraged but stories with any other coding language are also welcome</p>
+ <P>     
+
+Stories using R or Python are very much encouraged but stories with any other coding language are also welcome. For more information <a href="mailto:dawit3000@hotmail.com?body=Line1-text%0D%0ALine2-text">contact the webmaster</a>
+
+</p>
 
     </div>
   </article>
