--- a/public/2020-09-20-r-rmarkdown/index.html
+++ b/public/2020-09-20-r-rmarkdown/index.html
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Periodic and Average Periodic Returns of Financial Portfolios using R - R Stories">
 
 
-  <link href='/favicon.ico' rel='icon' type='image/x-icon'/>
+  <link href='https://rstories.netlify.app/favicon.ico' rel='icon' type='image/x-icon'/>
 
 
 
@@ -534,7 +534,7 @@ Aug
 Sep
 </td>
 <td style="text-align:right;">
--0.0516640
+-0.0724850
 </td>
 </tr>
 <tr>
@@ -642,7 +642,7 @@ since 1927
 Sep
 </td>
 <td style="text-align:right;">
--0.0104641
+-0.0106879
 </td>
 </tr>
 <tr>
