--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 <meta property="og:title" content="About - R Stories">
 
 
-  <link href='https://rstories.netlify.app/favicon.ico' rel='icon' type='image/x-icon'/>
+  <link href='/favicon.ico' rel='icon' type='image/x-icon'/>
 
 
 
