--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,7 +63,9 @@
     
 
     <div class="article-content">
-      <p>This is a &ldquo;hello world&rdquo; example website for the <a href="https://github.com/rstudio/blogdown"><strong>blogdown</strong></a> package. The theme was forked from <a href="https://github.com/jrutheiser/hugo-lithium-theme">@jrutheiser/hugo-lithium-theme</a> and modified by <a href="https://github.com/yihui/hugo-lithium">Yihui Xie</a>.</p>
+      <p> R-Storoes is for story tellers who also use R-Codes. Story tellers who use other codes, like Python, are also welcome. For questions or suggestions,  contact the webmaster: dawit3000 at hotmail.com.
+        
+      </p>
 
     </div>
   </article>
