--- a/public/2020-09-20-r-rmarkdown/index.html
+++ b/public/2020-09-20-r-rmarkdown/index.html
@@ -885,7 +885,7 @@ Defined a Nation, </em>William Morrow (Publisher); 1st Edition, June 13, 2017.</
 <div>
 <footer class="footer">
   <a class="footer-links">
-    &copy; 2020 Dawit Aberra
+    &copy; 2020 Dawit Aberra - Professor of Mathematics, Fort Valley State University, Fort Valley, GA-31030
   </a>
   <ul class="footer-links">
     <li>
