--- a/public/about/index.html
+++ b/public/about/index.html
@@ -360,7 +360,7 @@ display: none;
 <div id="r-stories" class="section level2">
 <h2>R Stories</h2>
 <p>This blog site is maintained by Dawit Aberra. For question or
-comments, contact at <a href="mailto:aberrad@fvsu.edu" class="email">aberrad@fvsu.edu</a></p>
+comments, contact at <a href="mailto:aberrad@fvsu.edu" class="email">aberrad@fvsu.edu</a>.</p>
 </div>
 
 
