--- a/public/about2/index.html
+++ b/public/about2/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="D. Aberra" />
 
-<meta name="date" content="2024-05-18" />
+<meta name="date" content="2024-05-20" />
 
 <title>index</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">index</h1>
 <h4 class="author">D. Aberra</h4>
-<h4 class="date">2024-05-18</h4>
+<h4 class="date">05/20/2024</h4>
 
 </div>
 
@@ -360,7 +360,7 @@ display: none;
 <div id="r-stories" class="section level2">
 <h2>R Stories</h2>
 <p>This blog site is maintained by Dawit Aberra. For question or
-comments, contact at <a href="mailto:aberrad@fvsu.edu" class="email">aberrad@fvsu.edu</a>.</p>
+comments, write email: <a href="mailto:aberrad@fvsu.edu" class="email">aberrad@fvsu.edu</a>.</p>
 </div>
 
 
