--- a/public/about2/index.html
+++ b/public/about2/index.html
@@ -360,7 +360,7 @@ display: none;
 <div id="r-stories" class="section level2">
 <h2>R Stories</h2>
 <p>This blog site is maintained by Dawit Aberra. For question or
-comments, write email: <a href="mailto:aberrad@fvsu.edu" class="email">aberrad@fvsu.edu</a>.</p>
+comments, write email: <a href="mailto:dawit3000@hotmail.com" class="email">dawit3000@hotmail.com</a></p>
 </div>
 
 
