--- a/public/about2/index.html
+++ b/public/about2/index.html
@@ -357,10 +357,9 @@ display: none;
 </div>
 
 
-<div id="r-stories" class="section level2">
-<h2>R Stories</h2>
-<p>This blog site is maintained by Dawit Aberra. For question or
-comments, write email: <a href="mailto:dawit3000@hotmail.com" class="email">dawit3000@hotmail.com</a></p>
+<div id="r-stories-blogged" class="section level2">
+<h2>R-STORIES (BLOGGED)</h2>
+<p>Questions or comments about this website may be sent to: <a href="mailto:dawit3000@hotmail.com" class="email">dawit3000@hotmail.com</a></p>
 </div>
 
 
